--- a/css.css
+++ b/css.css
@@ -1,8 +1,20 @@
-html, body {
-	background-color: #000;
-	color: #fff;
+html {
 	font-family: Helvetica Neue, arial, sans-serif;
 	font-weight: 100;
 	letter-spacing: .1em;
 	font-size: 100%;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+body { 
+	background-color: #000;
+	color: #fff;
+}
+
+.container {
+	margin: 0 auto;
+	width: 900px;
+	text-align: center;
 }
